--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-countup": "^6.5.0",
+    "react-dom": "^18.2.0",
+    "remixicon": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
