--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-whatsapp": "^0.3.0",
     "remixicon": "^3.6.0"
   },
   "devDependencies": {
