--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-whatsapp": "^0.3.0",
+    "react-zoom-pan-pinch": "^3.3.0",
     "remixicon": "^3.6.0"
   },
   "devDependencies": {
